# ClickGlow

./: .gitignore  README.md
.github/workflows/: release.yml
docs/: gamification-rules.md  todo.md  usage.md
frontend/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.svelte  main.ts
src/: buddy.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_hourly_stats.sql  003_app_tracking.sql  004_keyword_rules.sql  005_mouse_distance.sql
src-tauri/src/: apm.rs  commands.rs  lib.rs  main.rs  panic.rs  state.rs
src-tauri/src/buddy/: mod.rs
src-tauri/src/db/: connection.rs  queries.rs  schema.rs
src-tauri/src/input/: buffer.rs  listener.rs  mod.rs
src-tauri/src/pet/: mod.rs
src-tauri/src/platform/: macos.rs  mod.rs
src-tauri/src/reporting/: mod.rs
src-tauri/src/tracking/: detector.rs  mod.rs
src-tauri/src/tray/: menu.rs
src/css/: activity-log.css  apm-panic.css  apps.css  buddy.css  core.css  dashboard.css  heatmap-replay.css  heatmap.css  keyboard-wear.css  keyboard.css  odometer.css  onboarding.css  pet.css  rules.css  settings.css  sidebar.css  styles.css  terrain-map.css  toast.css  trail-art.css  weekly.css
src/js/: activity-log.js  apm.js  apps.js  buddy.js  charts.js  controls.js  dashboard.js  heatmap-replay.js  keyboard-wear.js  main.js  odometer.js  panic-index.js  pet.js  settings.js  sounds.js  terrain-map.js  trail-art.js  utils.js  (+1 more)
(+27 files in other folders)
