[package]
name = "clickglow"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
rdev = { git = "https://github.com/fufesou/rdev", branch = "master" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.33"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
